| Summary: | ASTERISK-25725: core: Incorrect XML documentation may result in weird behavior | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-01-25 08:32:18.000-0600 | Date Closed: | 2016-01-28 15:59:19.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Configuration |
| Versions: | 13.7.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Sorcery and the config options framework heavily enforces configuration options being documented. If they aren't documented then the options aren't loaded. In practice this does not cause a hard failure and may result in weird behavior instead.
Take for example code that expects a default value to exist for an option. If this option is not documented then the default value will not be set. This should be a bit more user friendly and informative of what is going on. | ||
| Comments: | |||